--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,6 @@
       height: 0;
       top: 0;
       left: 0;
-
     }
 
     #css {
@@ -67,51 +66,33 @@
   </style>
 
   <!-- Primary Meta Tags -->
-  <title>Henry Heffernan - Portfolio 2022</title>
-  <meta name="title" content="Henry Heffernan - Software Engineer">
-  <meta name="description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+  <title>Ujjwal - Portfolio 2025</title>
+  <meta name="title" content="Ujjwal - Freelancer">
+  <meta name="description" content="I'm Ujjwal, a high school pass-out freelancer skilled in Adobe Photoshop, MS Excel, PowerPoint, Canva, CapCut, Netlify, Koyeb, Telegram Bots, and Low-Code tools.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://henryheffernan.com/">
-  <meta property="og:title" content="Henry Heffernan - Software Engineer">
-  <meta property="og:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
+  <meta property="og:url" content="https://instagram.com/you_jjwal/"> <!-- replace with your site URL -->
+  <meta property="og:title" content="Ujjwal - Freelancer Portfolio">
+  <meta property="og:description" content="Freelancer skilled in design, automation, and low-code projects. Connect with me on social platforms.">
+  <meta property="og:image" content="https://i.imgur.com/yourImageCode.jpg"> <!-- replace with your image -->
 
-  <!-- Twitter -->
-
-
+  <!-- Twitter Meta Tags -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://x.com/you_jjwal/"> <!-- replace with your site URL -->
+  <meta property="twitter:title" content="Ujjwal - Freelancer Portfolio">
+  <meta property="twitter:description" content="Freelancer skilled in design, automation, and low-code projects. Connect with me on social platforms.">
+  <meta property="twitter:image" content="https://i.imgur.com/yourImageCode.jpg"> <!-- replace with your image -->
 
-  <meta property="twitter:url" content="https://henryheffernan.com/">
-  <meta name="twitter:url" content="https://henryheffernan.com/">
-
-  <meta property="twitter:title" content="Henry Heffernan - Software Engineer">
-  <meta name="twitter:title" content="Henry Heffernan - Software Engineer">
-
-  <meta property="twitter:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
-  <meta name="twitter:description"
-    content="I'm Henry, a Software Engineer based in NY. Rensselaer Polytechnic Institute Graduate with my B.S. in Computer Science, currently looking for a full time role.">
-
-  <meta property="twitter:image" content="https://henryheffernan.com/images/preview-new.jpg">
-  <meta name="twitter:image" content="https://henryheffernan.com/images/preview-new.jpg">
-
-  <!-- Images -->
-  <meta property="og:image" content="https://henryheffernan.com/images/preview-new.jpg">
-  <meta property="og:image:secure" content="https://henryheffernan.com/images/preview-new.jpg">
-
+  <!-- Favicon -->
   <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Google Analytics (Optional) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FJBF6WF60"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-4FJBF6WF60');
   </script>
 </head>
